[package]
name = "async-parser"
version = "0.0.1"
description = "An asynchronous parser combinator."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/async-parser"
keywords = ["parser-combinator", "parser", "async", "asynchronous"]
categories = ["parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
futures-core = "0.3"
futures-io = "0.3"
pin-project-lite = "0.2"
